--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -110,6 +116,8 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+<!--                    add this line for deploy-->
+                    <executable>true</executable>
                 </configuration>
             </plugin>
         </plugins>
