--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/artcart_db?serverTimeZone=UTC
-    username: artcart
+    username: artcartdbuser
     password: manash@12345@
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
