--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '1.1'
 
 services:
   app:
-    image: manash114/artcartaug:1.0.0
+    image: manash/artcart-back:1.0.0
     ports:
       - 9090:9090
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/artcartdb?autoReconnect=true&allowPublicKeyRetrieval=true&&useSSL=false
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/artcartdb1?autoReconnect=true&allowPublicKeyRetrieval=true&&useSSL=false
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: root
     depends_on:
@@ -18,6 +18,6 @@ services:
       DATABASE_HOST: docker-mysql
       DATABASE_PORT: 3306
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: artcartdb
+      MYSQL_DATABASE: artcartdb1
       MYSQL_USER: admin
       MYSQL_PASSWORD: root
