--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,10 +1,10 @@
 server:
-  port: 7002
+  port: 9090
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/artcart_db?serverTimeZone=UTC
-    username: artcartdbuser
-    password: manash@12345@
+    url: jdbc:mysql://${MYURL}:11822/defaultdb
+    username: ${MY_USERNAME}
+    password: ${MY_SERVICE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
