--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,7 +3,7 @@ server:
   port: 7002
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/artcart_new3
+    url: jdbc:mysql://localhost:3306/ar
     username: root
     password: manash@12345@
     driver-class-name: com.mysql.cj.jdbc.Driver
