--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,9 +2,9 @@ server:
   port: 9090
 spring:
   datasource:
-    url: jdbc:mysql://${MYURL}:11822/defaultdb
-    username: ${MY_USERNAME}
-    password: ${MY_SERVICE_PASSWORD}
+    url: jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
